--- a/platformio.ini
+++ b/platformio.ini
@@ -9,20 +9,25 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:m5stack-core-esp32]
-platform = espressif32
+platform = espressif32 @ 6.3.0
 board = m5stack-core-esp32
 framework = arduino
+build_flags = 
+	-UINCLUDE_SDIOS
+	-DSD_FAT_TYPE=3
+	-DSPI_DRIVER_SELECT=1
+	-DUSE_BLOCK_DEVICE_INTERFACE=0
+	-DFAT12_SUPPORT=0
+	-DSDFAT_FILE_TYPE=3
+	-DUSE_SPI_ARRAY_TRANSFER=1
+	-DENABLE_DEDICATED_SPI=0
+	-DSD_MAX_INIT_RATE_KHZ=25000
+
+
 lib_deps = 
-	m5stack/M5Stack@^0.3.1
-	greiman/SdFat@^2.0.5
- 	lorol/LittleFS_esp32 @ ^1.0.6
-	107-systems/107-Arduino-Debug @ ^1.1.2
-	bblanchon/ArduinoTrace @ ^1.2.0
+	m5stack/M5Unified@^0.1.6
+	https://github.com/greiman/SdFat.git#57900b2
+
 upload_speed = 921600
 monitor_speed = 115200
 
-upload_port = COM3			; @NTB COM3 | @PC COM9 | /dev/ttyUSB0
-monitor_port = COM3 		; @NTB COM3 | @PC COM9 | /dev/ttyUSB0
-
-extra_scripts = 
-	replace_fs.py
